# eoap-cwlwrap

./: .gitignore  404.html  Dockerfile  README.md  Taskfile.yaml  current.cwl  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml  package.yaml
docs/: index.md  pattern-1.ipynb  pattern-1.md  pattern-10.ipynb  pattern-10.md  pattern-11.ipynb  pattern-12.ipynb  pattern-2.ipynb  pattern-2.md  pattern-3.ipynb  pattern-3.md  pattern-4.ipynb  pattern-4.md  pattern-5.ipynb  pattern-5.md  pattern-6.ipynb  pattern-6.md  pattern-7.ipynb  pattern-7.md  pattern-8.ipynb  pattern-8.md  pattern-9.ipynb  pattern-9.md
docs/explanation/: index.md  wrapping-model.md
docs/how-to-guides/: build-a-wrapper.md  index.md  install.md  use-python-api.md
docs/reference/: cli.md  component-contracts.md  dependencies.md  index.md
docs/tutorials/: index.md  wrap-pattern-1.ipynb
docs/workflows/: pattern-1.cwl  pattern-10.cwl  pattern-2.cwl  pattern-3.cwl  pattern-4.cwl  pattern-5.cwl  pattern-6.cwl  pattern-7.cwl  pattern-8.cwl  pattern-9.cwl
example/: index.html
expected/: clt.cwl  pattern-1.cwl  stage-in.cwl  stage-out.cwl  temp.cwl
explanation/: index.html
explanation/wrapping-model/: index.html
how-to-guides/: index.html
how-to-guides/build-a-wrapper/: index.html
how-to-guides/install/: index.html
how-to-guides/use-python-api/: index.html
pattern-1/: index.html
pattern-10/: index.html
pattern-11/: index.html
pattern-12/: index.html
pattern-2/: index.html
pattern-3/: index.html
pattern-4/: index.html
pattern-5/: index.html
pattern-6/: index.html
pattern-7/: index.html
pattern-8/: index.html
pattern-9/: index.html
reference/: index.html
reference/cli/: index.html
reference/component-contracts/: index.html
reference/dependencies/: index.html
search/: search_index.json
src/cwl_chain_builder/: __about__.py  builder.py  loader.py  pumler.py  (+1 more)
tests/: __init__.py  helpers.py  test_builder.py  test_pattern_1.py  test_pattern_10.py  test_pattern_2.py  test_pattern_3.py  test_pattern_4.py  test_pattern_5.py  test_pattern_6.py  test_pattern_7.py  test_pattern_8.py  test_pattern_9.py
tutorials/: index.html
(+31 files in other folders)
