[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cwl_chain_builder"
version = "1.0.0"
description = "Chain multiple CWL CommandLineTool steps into a single workflow."
authors = [{ name = "Simone Tripodi", email = "simone.tripodi@terradue.com" }]
dependencies = [
    "click>=8.0",
    "loguru",
    "cwl-utils>=0.38",
    "ruamel.yaml>=0.18"
]

[project.scripts]
cwl-chain-builder = "cwl_chain_builder.builder:main"

[tool.setuptools.packages.find]
where = ["src"]
